community-modules/core/src/styles/ag-grid.scss
/* ... */
.ag-row {
    white-space: nowrap;
    width: 100%;
}

.ag-row-position-absolute {
    position: absolute;
}

.ag-row-position-relative {
    position: relative;
}

.ag-full-width-row {
    overflow: hidden;
    // turn events back on, as we removed them in the parent
    pointer-events: all;
}

.ag-row-inline-editing {
    z-index: 1;
}

.ag-row-dragging {
    z-index: 2;
}

.ag-stub-cell {
    display: flex;
    align-items: center;
}

/**
 ****************************
 * Cells
 ****************************
*/
.ag-cell {
    display: inline-block;
    position: absolute;
    white-space: nowrap;
}

.ag-cell-value, .ag-group-value {
    overflow: hidden;
    text-overflow: ellipsis;
}

.ag-cell-wrapper {
    display: flex;
    align-items: center;
    width: 100%;
    height: 100%;
    overflow: hidden;
    &.ag-row-group {
        align-items: flex-start;
    }
}

.ag-cell-auto-height {
    height: 100%;
}

.ag-cell-inline-editing {
    z-index: 1;
    .ag-cell-edit-wrapper, 
    .ag-cell-editor,
    .ag-cell-editor .ag-wrapper,
    .ag-cell-editor input {
        height: 100%;
        width: 100%;
        line-height: normal;
    }
}

.ag-cell .ag-icon {
    display: inline-block;
    vertical-align: middle;
}

/**
 ****************************
 * Filters
 ****************************
*/
.ag-set-filter-item {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    display: flex;
    align-items: center;
}

.ag-set-filter-item-value {
    display: flex;
}

.ag-set-filter-item-checkbox {
    display: flex;

    // for focus reasons, we need this for IE, otherwise for the set filter, the 'selectAll' click doesn't work
    // when you click on it when the quick filter has focus. this was a fix for AG-2258
    pointer-events: none;
}

.ag-filter-body-wrapper {
    display: flex;
    flex-direction: column;
}

.ag-filter-filter {
    flex: 1 1 auto;
    overflow: hidden;
}

.ag-filter-condition {
    display: flex;
}

/**
 ****************************
 * Floating Filter
 ****************************
*/

.ag-floating-filter-body {
    position: relative;
    display: flex;
    flex: 1 1 auto;
    height: 100%;
}

.ag-floating-filter-full-body {
    display: flex;
    flex: 1 1 auto;
    height: 100%;
    width: 100%;
    align-items: center;
    overflow: hidden;
}

.ag-floating-filter-full-body > div {
    flex: 1 1 auto;
}

.ag-floating-filter {
    display: inline-block;
    position: absolute;
}

.ag-floating-filter-input {
    align-items: center;
    display: flex;
    width: 100%;

    > * {
        flex: 1 1 auto;
    }
}

.ag-floating-filter-button {
    display: flex;
    flex: none;
}

/**
 ****************************
 * Drag & Drop
 ****************************
*/

.ag-dnd-wrapper {
    position: absolute;
}

.ag-dnd-ghost {
    position: relative;
    display: inline-flex;
    align-items: center;
    cursor: move;
    white-space: nowrap;
}

/**
 ****************************
 * Overlay
 ****************************
*/
.ag-overlay {
    height: 100%;
    left: 0;
    pointer-events: none;
    position: absolute;
    top: 0;
    width: 100%;
}

.ag-overlay-panel {
    display: flex;
    height: 100%;
    width: 100%;
}

.ag-overlay-wrapper {
    display: flex;
    flex: none;
    width: 100%;
    height: 100%;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.ag-overlay-loading-wrapper {
    // prevent interaction with grid while it's loading
    pointer-events: all;
}

/**
 ****************************
 * Popup
 ****************************
*/
.ag-popup-child {
    z-index: 5;
}

.ag-popup-editor {
    position: absolute;
    user-select: none;
    z-index: 1;
}

.ag-large-text-input {
    display: block;
}

/**
 ****************************
 * Virtual Lists
 ****************************
*/
.ag-virtual-list-item {
    position: absolute;
    width: 100%;
}

/**
 ****************************
 * Floating Top and Bottom
 ****************************
*/
.ag-floating-top {
    overflow: hidden;
    white-space: nowrap;
    width: 100%;
    position: relative;
    display: flex;
}

.ag-pinned-left-floating-top {
    display: inline-block;
    overflow: hidden;
    position: relative;
    min-width: 0px;
}

.ag-pinned-right-floating-top {
    display: inline-block;
    overflow: hidden;
    position: relative;
    min-width: 0px;
}

.ag-floating-bottom {
    overflow: hidden;
    white-space: nowrap;
    width: 100%;
    position: relative;
    display: flex;
}

.ag-pinned-left-floating-bottom {
    display: inline-block;
    overflow: hidden;
    position: relative;
    min-width: 0px;
}

.ag-pinned-right-floating-bottom {
    display: inline-block;
    overflow: hidden;
    position: relative;
    min-width: 0px;
}


/**
 ****************************
 * Dialog
 ****************************
*/

.ag-dialog, .ag-panel {
    display: flex;
    flex-direction: column;
    position: relative;
    overflow: hidden;
}

.ag-panel-title-bar {
    display: flex;
    flex: none;
    align-items: center;
    cursor: default;
}

.ag-panel-title-bar-title {
    flex: 1 1 auto;
}

.ag-panel-title-bar-buttons {
    display: flex;
}

.ag-panel-title-bar-button {
    cursor: pointer;
}

.ag-panel-content-wrapper {
    display: flex;
    flex: 1 1 auto;
    position: relative;
    overflow: hidden;
}

.ag-dialog {
    position: absolute;
}
/* ... */

